[package]
name = "seabird-core-v2"
version = "0.1.0"
authors = ["Kaleb Elwert <belak@coded.io>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
futures = "0.3"
log = "0.4"
percent-encoding = "2.1"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["dns", "fs", "io-util", "macros", "rt-core", "rt-threaded", "signal", "stream", "sync"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.2"
